erDiagram
    CONTA ||--o{ EMPRESA : possui
    EMPRESA ||--o{ DESPESA : possui
    EMPRESA ||--o{ SOCIO : possui
    SOCIO ||--o{ DESPESA : "pode ser responsável"
    GRUPO_DESPESA ||--o{ ITEM_DESPESA : possui
    ITEM_DESPESA ||--o{ DESPESA : classifica
    ITEM_DESPESA ||--o{ ITEM_DESPESA_RATEIO_MENSAL : "configura rateio"
    SOCIO ||--o{ ITEM_DESPESA_RATEIO_MENSAL : participa
    DESPESA ||--o{ ITEM_DESPESA_RATEIO_MENSAL : "usa configuração para rateio dinâmico"

    CONTA {
        int id PK
        string name
        string cnpj
    }
    EMPRESA {
        int id PK
        string name
        string cnpj
        int conta_id FK
    }
    SOCIO {
        int id PK
        string nome
        int empresa_id FK
    }
    GRUPO_DESPESA {
        int id PK
        string codigo
        string descricao
    }
    ITEM_DESPESA {
        int id PK
        string codigo
        string descricao
        int grupo_despesa_id FK
    }
    DESPESA {
        int id PK
        date data
        decimal valor
        int empresa_id FK
        int item_despesa_id FK
        int socio_id FK
    }
    ITEM_DESPESA_RATEIO_MENSAL {
        int id PK
        int item_despesa_id FK
        int socio_id FK
        date data_referencia
        decimal percentual_rateio
        bool ativo
    }
